refactor:rest counter when changing music, correct code

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <audio loop id="sound"></audio>
       <h1 id="title">Create your MOOD</h1>
       <button id="state" class="play hidden"></button>
-      <div id="svg" class="hidden">
+      <div id="svg-element" class="hidden">
         <svg class="track-outline" width="453" height="453" viewBox="0 0 453 453" fill="none">
           <circle cx="226.5" cy="226.5" r="216.5" stroke="cyan" stroke-width="20" />
         </svg>
@@ -27,7 +27,7 @@
       </div>
       <h2 id="time" class="hidden">Please, choose time!</h2>
       <video loop id="video">
-        <source type="video/mp4" />
+        <source type="video/mp4" src=""/>
       </video>
     </div>
     <div class="select-music">
