:refactor make vavidable code, add new streeng

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <h2 id="time" class="hidden">Please, choose time!</h2>
       <video loop id="video">
-        <source type="video/mp4" src=""/>
+        <source type="video/mp4" src="./"/>
       </video>
     </div>
     <div class="select-music">
